# docs-parser

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/: README.md  docker-compose.yaml  pyproject.toml  requirements.txt
backend/config/: config.yaml
backend/src/app/api/: main.py
backend/src/app/api/routes/: chat.py  documents.py
backend/src/app/common/: config.py  hash.py  parser.py  runtime.py
backend/src/app/indexing/: __init__.py  index_bodies.py
backend/src/app/parsers/documents/: docx_parser.py  pdf_parser.py
backend/src/app/parsing/: common_parser.py  docx_parser.py  ocr.py  pdf_parser.py  regex.py
backend/src/app/pipelines/: document_ingest.py
backend/src/app/storage/: embedding.py  minio.py  opensearch.py  postgres.py
backend/src/app/views/: docs_parser.py
config/: config.yml
frontend/: package-lock.json  package.json
frontend/src/: main.tsx
frontend/src/api/: chat.ts  client.ts  documents.ts
frontend/src/app/: App.tsx  router.tsx
frontend/src/app/layout/: AppShell.tsx  GlobalStatusProvider.tsx  nav.ts
frontend/src/pages/: ChatListPage.tsx  ConversationsPage.tsx  DocumentListPage.tsx  ParsePage.tsx
results/: upload.de9a341be5ed.md  upload.de9a341be5ed.provenance.json
scratch/: upload.2ca2f026fdcf.md
src/app/api/: main.py
src/app/indexing/: chunking.py  index_bodies.py
src/app/parsing/: image_extractor.py  ocr.py  regex.py
src/app/storage/: embedding.py
src/app/workflows/: common_ingest.py  docx_ingest.py  pdf_ingest.py
(+21 files in other folders)
